# hafiz

./: .gitignore  BRAIN_AGENT_GUIDE.md  CLAUDE.md  COMMANDS.md  README.md  ROADMAP.md  alembic.ini  hafiz.toml.example  pyproject.toml
.claude/commands/: brain-query.md  ingest.md
alembic/: env.py
hafiz/: __init__.py  cli.py
hafiz/commands/: __init__.py  agent.py  chunks.py  context.py  extract.py  graph.py  hooks.py  ingest.py  maintenance.py  observe.py  prune.py  query.py  review.py  watch.py
hafiz/core/: __init__.py  agents.py  chunker.py  config.py  context.py  database.py  embeddings.py  extractor.py  git_hooks.py  observations.py  review.py  search.py  store.py  watcher.py
hafiz/data/agents/: skills.md
hafiz/scripts/: post-commit
tests/: test_chunker.py  test_cli.py  test_config.py  test_search.py
